added qr-code for github link

--- a/EP00_Welcome.ipynb
+++ b/EP00_Welcome.ipynb
@@ -11,7 +11,7 @@
     "University of Applied Sciences and Arts Northwestern Switzerland<br/>\n",
     "martin.christen@fhnw.ch<br/>\n",
     "\n",
-    "<img src=\"artwork/flyer.jpg\" width=\"30%\" />\n",
+    "<img src=\"artwork/flyer.jpg\" width=\"30%\" /> <img src=\"artwork/qr.png\" width=\"15%\"/>\n",
     "\n",
     "<div class=\"alert alert-block alert-info\"> <b>GitHub:</b><br/> <a href=\"https://github.com/martinchristen/EP2023Tutorial\">github.com/martinchristen/EP2023Tutorial</a> \n",
     "<br/>\n",
