--- a/EP00_Welcome.ipynb
+++ b/EP00_Welcome.ipynb
@@ -27,8 +27,7 @@
    "metadata": {},
    "source": [
     "<div class=\"alert alert-block alert-danger\">\n",
-    "<b>Warnings</b><br/><br/>\n",
-    "To run everything you need about 25 GB on your disk (where the notebooks are located)<br/>\n",
+    "<b>Warnings</b><br/>To run everything you need about <b>25 GB</b> on your disk (where the notebooks are located)<br/>\n",
     "We need to download a couple GB during this tutorial<br/>\n",
     "Please <b>don't execute</b> EP13_OSMnx.ipynb during the conference. OpenStreetMap will ban/restrict the conference IP if we exec it all at the same time<br/>\n",
     "</div>"
