--- a/EP00_Welcome.ipynb
+++ b/EP00_Welcome.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "Prof. Martin Christen<br/>\n",
     "University of Applied Sciences and Arts Northwestern Switzerland<br/>\n",
-    "martin.christen@fhnw.ch<br/>\n",
+    "martin.christen@fhnw.ch | Twitter: @MartinChristen |  LinkedIn: https://ch.linkedin.com/in/martinchristen    <br/>\n",
     "\n",
     "<img src=\"artwork/flyer.jpg\" width=\"30%\" /> <img src=\"artwork/qr.png\" width=\"15%\"/>\n",
     "\n",
