--- a/EP00_Welcome.ipynb
+++ b/EP00_Welcome.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "Prof. Martin Christen<br/>\n",
     "University of Applied Sciences and Arts Northwestern Switzerland<br/>\n",
-    "martin.christen@fhnw.ch | Twitter: @MartinChristen |  LinkedIn: https://ch.linkedin.com/in/martinchristen    <br/>\n",
+    "martin.christen@fhnw.ch  | Twitter: @MartinChristen |  LinkedIn: https://ch.linkedin.com/in/martinchristen    <br/>\n",
     "\n",
     "<img src=\"artwork/flyer.jpg\" width=\"30%\" /> <img src=\"artwork/qr.png\" width=\"15%\"/>\n",
     "\n",
@@ -29,7 +29,7 @@
     "<div class=\"alert alert-block alert-danger\">\n",
     "<b>Warnings</b><br/>To run everything you need about <b>25 GB</b> on your disk (where the notebooks are located)<br/>\n",
     "We need to download a couple GB during this tutorial<br/>\n",
-    "Please <b>don't execute</b> EP13_OSMnx.ipynb during the conference. OpenStreetMap will ban/restrict the conference IP if we exec it all at the same time<br/>\n",
+    "    Please <b>don't execute</b> the notebook <b>EP13_OSMnx.ipynb</b> during the conference. OpenStreetMap will ban/restrict the conference IP if we exec it all at the same time!<br/>\n",
     "</div>"
    ]
   },
