fix: use actual hyphen character

--- a/EP02_Installation_MacOS.ipynb
+++ b/EP02_Installation_MacOS.ipynb
@@ -99,7 +99,7 @@
     "Let's create our environment where we will install all the modules we need in this course.\n",
     "\n",
     "    \n",
-    "    mamba create --name geopython310 python=3.10 jupyterlab –c conda-forge -y    \n",
+    "    mamba create --name geopython310 python=3.10 jupyterlab -c conda-forge -y    \n",
     "    \n",
     "    mamba activate geopython310          \n",
     "\n",
