--- a/EP02_Installation_MacOS.ipynb
+++ b/EP02_Installation_MacOS.ipynb
@@ -63,6 +63,9 @@
     "\n",
     "You can also install mamba in an existing Anaconda/Miniconda installation: \n",
     "\n",
+    "    conda remove libarchive\n",
+    "    conda install libarchive -n base -c conda-forge\n",
+    "\n",
     "    conda install -n base --override-channels -c conda-forge mamba 'python_abi=*=*cp*'\n",
     "    mamba init\n",
     "    \n",
